<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_current"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_current" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_custom"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_custom" />

</menu>