<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/weekText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/statistic_week"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weekCalories_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekText" />

    <TextView
        android:id="@+id/weekTime_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekText" />

    <TextView
        android:id="@+id/weekActivity_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statistic_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekText" />

    <TextView
        android:id="@+id/weekCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/weekCalories_StaticText"
        app:layout_constraintStart_toStartOf="@+id/weekCalories_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/weekCalories_StaticText" />

    <TextView
        android:id="@+id/weekTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/weekTime_StaticText"
        app:layout_constraintStart_toStartOf="@+id/weekTime_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/weekTime_StaticText" />

    <TextView
        android:id="@+id/weekActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/weekActivity_StaticText"
        app:layout_constraintStart_toStartOf="@+id/weekActivity_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/weekActivity_StaticText" />

    <TextView
        android:id="@+id/monthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/statistic_month"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekTimeText" />

    <TextView
        android:id="@+id/monthCalories_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthText" />

    <TextView
        android:id="@+id/monthTime_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthText" />

    <TextView
        android:id="@+id/monthActivity_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statistic_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthText" />

    <TextView
        android:id="@+id/monthCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/monthCalories_StaticText"
        app:layout_constraintStart_toStartOf="@+id/monthCalories_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/monthCalories_StaticText" />

    <TextView
        android:id="@+id/monthTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/monthTime_StaticText"
        app:layout_constraintStart_toStartOf="@+id/monthTime_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/monthTime_StaticText" />

    <TextView
        android:id="@+id/monthActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/monthActivity_StaticText"
        app:layout_constraintStart_toStartOf="@+id/monthActivity_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/monthActivity_StaticText" />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/statistic_year"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthTimeText" />

    <TextView
        android:id="@+id/yearCalories_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />

    <TextView
        android:id="@+id/yearTime_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />

    <TextView
        android:id="@+id/yearActivity_StaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statistic_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />

    <TextView
        android:id="@+id/yearCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yearCalories_StaticText"
        app:layout_constraintStart_toStartOf="@+id/yearCalories_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/yearCalories_StaticText" />

    <TextView
        android:id="@+id/yearTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yearTime_StaticText"
        app:layout_constraintStart_toStartOf="@+id/yearTime_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/yearTime_StaticText" />

    <TextView
        android:id="@+id/yearActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yearActivity_StaticText"
        app:layout_constraintStart_toStartOf="@+id/yearActivity_StaticText"
        app:layout_constraintTop_toBottomOf="@+id/yearActivity_StaticText" />

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>